# nea-claudiu

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
src/nea_claudiu/: cli.py  commenter.py  config.py  daemon.py  models.py  prompt.py  reviewer.py  state.py
src/nea_claudiu/providers/: base.py  bitbucket.py
src/reviewd/: cli.py  colors.py  commenter.py  config.example.yaml  config.py  daemon.py  models.py  project.example.yaml  prompt.py  reviewer.py  state.py  wizard.py
src/reviewd/providers/: base.py  bitbucket.py  github.py
tests/: test_github.py  test_prompt.py
