[project]
name = "nea-claudiu"
version = "0.1.0"
description = "Local BitBucket PR watcher + auto-reviewer powered by Claude/Gemini CLI"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1,<9",
    "httpx>=0.27,<1",
    "pyyaml>=6.0,<7",
]

[project.scripts]
nea-claudiu = "nea_claudiu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nea_claudiu"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
